add_subdirectory(action)
add_subdirectory(beginning)
add_subdirectory(data)
add_subdirectory(data_files)
add_subdirectory(data_set)
add_subdirectory(entity)
add_subdirectory(fight)
add_subdirectory(level)
add_subdirectory(selection)
add_subdirectory(utils)
add_subdirectory(weapon)
add_subdirectory(writer)

add_executable(main main.cpp)

target_link_libraries(main PUBLIC beginning)
